# HybVIO

./: .editorconfig  .gitignore  .gitmodules  CITATION.bib  CMakeLists.txt  README.md
.github/workflows/: build-and-test.yml
codegen/: CMakeLists.txt  cmd_parameter_definitions.json  cmd_parameters_base.cpp  cmd_parameters_base.hpp  generate_parameters.py  parameter_definitions.c  parameters_base.cpp  parameters_base.hpp
src/api/: api.cpp  implementation_helpers.hpp  internal.hpp  output_buffer.hpp  slam.hpp  slam_map_point_record.hpp  type_convert.cpp  type_convert.hpp  types.hpp  vio.hpp  visualizations.cpp  visualizations.hpp
src/commandline/: command_queue.cpp  command_queue.hpp  draw_gl.cpp  draw_gl.hpp  imu_visualization.hpp  input.cpp  input.hpp  input_csv.cpp  input_jsonl.cpp  main.cpp  parameters.hpp  video_input.cpp  video_input.hpp  videoutil.cpp  videoutil.hpp  visual_update_viewer.cpp  visual_update_viewer.hpp
src/odometry/: backend.cpp  control.cpp  control.hpp  debug.hpp  ekf.cpp  ekf.hpp  ekf_state_index.cpp  ekf_state_index.hpp  output.cpp  output.hpp  parameters.hpp  processed_frame.hpp  sample_sync.cpp  sample_sync.hpp  tagged_frame.hpp  triangulation.cpp  triangulation.hpp  util.cpp  util.hpp  visual_update_stats.hpp
src/tracker/: CMakeLists.txt  camera.cpp  camera.hpp  feature_detector.cpp  feature_detector.hpp  feature_detector_legacy.cpp  five_point.cpp  five_point.hpp  gpu_util.cpp  gpu_util.hpp  image.cpp  image.hpp  image_pyramid.cpp  image_pyramid.hpp  optical_flow.cpp  optical_flow.hpp  precomp.hpp  ptsetreg.cpp  ptsetreg.hpp  ransac_pipeline.cpp  ransac_pipeline.hpp  ransac_result.hpp  rot_ransac.cpp  rot_ransac.hpp  stereo_disparity.cpp  stereo_disparity.hpp  stereo_rectifier.cpp  stereo_rectifier.hpp  stereo_upright_2p.cpp  stereo_upright_2p.hpp  subpixel_adjuster.cpp  subpixel_adjuster.hpp  track.hpp  tracker.cpp  tracker.hpp  tracker_internals.hpp  undistorter.cpp  undistorter.hpp  util.cpp  util.hpp
src/util/: allocator.hpp  auto_help_parser.hpp  bounded_processing_queue.hpp  gps.hpp  logging.hpp  parameter_parser.cpp  parameter_parser.hpp  slam_noop.cpp  string_utils.hpp  timer.cpp  timer.hpp  util.cpp  util.hpp
src/views/: api_visualization_helpers.cpp  api_visualization_helpers.hpp  views.hpp  visualization_internals.cpp  visualization_internals.hpp  visualization_pose.cpp
test/: CMakeLists.txt  allocator.cpp  camera.cpp  catch2  ekf.cpp  helpers.cpp  helpers.hpp  parameter_parser.cpp  sample_sync.cpp  test_main.cpp  triangulation.cpp  util.cpp
test/data/: P.csv  hilb10.csv  m.csv
